--- a/Week05.ipynb
+++ b/Week05.ipynb
@@ -717,8 +717,11 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**Explanation od Exercise 1** <br>\n",
-        "This scatterplot visualization uses point marks. The x-position channel encodes *Health Expenditure per Capita (USD)* (**primary variable**), and the y-position channel encodes *Health Expenditure (% of GDP)* (**Secondary variable**). The **color hue** channel represents the **categorical variable** *region*, separating countries into WHO regions. A vertical line was added to indicate the **mean value** of per capita spending, helping contextualize the data. These choices follow the principles of expressiveness (ordered data for position, categorical data for color) and effectiveness (position is the most accurate channel)."
+        "**Question**:\n",
+        " *How do countries in different WHO regions vary in health expenditure per capita, and how does this spending relate to health expenditure as a percentage of GDP?*\n",
+        "\n",
+        "**Explanation of Exercise 1** <br>\n",
+        "This scatterplot visualization uses point marks. The x-position channel encodes *Health Expenditure per Capita (USD)* (**primary variable**), and the y-position channel encodes *Health Expenditure (% of GDP)* (**Secondary variable**). The **color hue** channel represents the **categorical variable** *region*, separating countries into WHO regions. A vertical line was added to indicate the **mean value** of per capita spending, helping contextualize the data. To improve readability, the axis ranges were limited to reduce the influence of extreme outliers and highlight the main distribution of points. These choices follow the principles of expressiveness (ordered data for position, categorical data for color) and effectiveness (position is the most accurate channel)."
       ],
       "metadata": {
         "id": "oGU4UXBrLHOl"
@@ -836,7 +839,7 @@
         "**Is it clear that the first visualization is more effective for your question than the second? Why or why not, and what do you think?**\n",
         "\n",
         "<font color='darkblue'>\n",
-        "Yes, the first visualization is more effective. In Exercise 1, per capita spending is mapped to the x-axis, which Munzner’s framework ranks as the most accurate channel for ordered data. This makes it easier to compare across countries and regions. In Exercise 2, swapping the variables places per capita spending on the y-axis, which is less effective for showing large numeric variation. As a result, the second visualization is harder to interpret and less aligned with the original question, where per capita spending is the stronger focus.\n",
+        "Yes, the first visualization is more effective. In Exercise 1, per capita spending is mapped to the x-axis, which Munzner’s framework ranks as the most accurate channel for ordered data. This makes it easier to compare across countries and regions. In Exercise 2, swapping the variables places per capita spending on the y-axis, which is less effective for showing large numeric variation. As a result, the second visualization is harder to interpret and less aligned with the original question, where per capita spending is the stronger focus. This reinforces that the choice of primary variable should match the research question.\n",
         "\n",
         "</font>"
       ],
@@ -1018,10 +1021,10 @@
       "cell_type": "markdown",
       "source": [
         "**3a (Box Plot):**\n",
-        "Shows the distribution of per capita health expenditure across regions. It highlights variability, medians, and outliers within each region.\n",
+        "Shows the distribution of per capita health expenditure across regions. It highlights variability, medians, and outliers within each region, preserving the raw distribution of the data instead of collapsing it into a single summary statistic.\n",
         "\n",
         "**3b (Bar Chart):**\n",
-        "Shows the average health expenditure (% of GDP) by region. It makes regional comparisons clear with numeric labels for easy interpretation.\n",
+        "Shows the aggregated average health expenditure (% of GDP) by region. It simplifies the data into mean values for each WHO region, making regional comparisons clearer and easier to interpret, especially with numeric labels on top of the bars.\n",
         "\n",
         "<font color='darkblue'>\n",
         "The bar chart (3b) is more effective for comparing regional averages because it provides clear numeric values and a straightforward comparison across regions. However, the box plot (3a) is valuable for showing distribution and variation, which the bar chart hides. Together, they provide complementary insights, but I believe in terms of clarity and quick interpretation, 3b is the most effective.\n"
@@ -1029,6 +1032,15 @@
       "metadata": {
         "id": "ww1IBtKJnCU7"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "7j8t0x4ujdpx"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
